fixed icon in middle vertical, for opera table th align right
git-svn-id: svn://svn.ispconfig.org/ispconfig3/trunk@2546 c1a6f2c7-8504-0410-933a-a4dae0184b0a

--- a/interface/web/themes/default/css/screen/content.css
+++ b/interface/web/themes/default/css/screen/content.css
@@ -101,6 +101,7 @@
 	  background: #FFFFFF;
 	  border: 1px solid #DFDFDF;
 	  padding: 1px;
+	  outline:none;
 	}
 
 	
@@ -174,7 +175,7 @@
 	table.full { width: 100%; }
 	table.fixed { table-layout:fixed }
 	
-	th,td { padding: 0.5em; }
+	th,td { padding: 0.5em;text-align:right; }
 	thead th { background: #444 url(../../images/lists_thead_bg.png) repeat-x; color: #fff }
 	tbody th { background: #ccc; color: #333 }
 	tbody th.sub { background: #ddd; color: #333 }
